// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render 1`] = `
<div>
  <input
    class="sc-AxjAm crHBZA"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a danger color 1`] = `
<div>
  <input
    class="sc-AxjAm lgfIMg"
    color="danger"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a primary color 1`] = `
<div>
  <input
    class="sc-AxjAm gQzilT"
    color="primary"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a success color 1`] = `
<div>
  <input
    class="sc-AxjAm crHBZA"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a warning color 1`] = `
<div>
  <input
    class="sc-AxjAm diJezB"
    color="warning"
    type="checkbox"
  />
</div>
`;
